Fix editor nav jump (#1042)

--- a/app/src/marketplace/containers/EditProductPage/editorNav.pcss
+++ b/app/src/marketplace/containers/EditProductPage/editorNav.pcss
@@ -1,4 +1,4 @@
 .sticky {
   position: sticky;
-  top: 7rem;
+  top: 8.1235rem;
 }
